--- a/HTML/templates/company-vacancy-post.html
+++ b/HTML/templates/company-vacancy-post.html
@@ -20,9 +20,9 @@
                 <div class="checkbox-group">
                     <label><input type="radio" name="employment_type" value="full-time"> Full-Time</label>
                     <label><input type="radio" name="employment_type" value="part-time"> Part-Time</label>
-                    <label><input type="checkbox" name="employment_type" value="remote"> Remote</label>
-                    <label><input type="checkbox" name="employment_type" value="internship"> Internship</label>
-                    <label><input type="checkbox" name="employment_type" value="contract"> Contract</label>
+                    <label><input type="radio" name="employment_type" value="remote"> Remote</label>
+                    <label><input type="radio" name="employment_type" value="internship"> Internship</label>
+                    <label><input type="radio" name="employment_type" value="contract"> Contract</label>
                 </div>
             </div>
         </section>
@@ -83,6 +83,6 @@
             </div>
         </section>
 
-        <button type="submit" class="vacancy-submit-btn" onclick="redirectToJobListingCompany(event, this)">Submit offer</button>
+        <button type="submit" class="vacancy-submit-btn">Submit offer</button>
     </form>
 </main>
