--- a/HTML/templates/company-vacancy-toggle-nav.html
+++ b/HTML/templates/company-vacancy-toggle-nav.html
@@ -1,4 +1,4 @@
 <ul class="vacancy-tab-nav">
-    <li class="vacancy-tab"><a href="#" onclick="redirectToVacancyViewCompany(event, this)">Job Details</a></li>
-    <li class="vacancy-tab"><a href="#" onclick="redirectToVacancyApplicantsViewCompany(event, this)">Applicants</a></li>
+    <li id="redirect-to-vacancy-edit" class="vacancy-tab"><a href="#">Job Details</a></li>
+    <li id="redirect-to-vacancy-list" class="vacancy-tab"><a href="#">Applicants</a></li>
 </ul>
