--- a/HTML/templates/vacancy-profile-view.html
+++ b/HTML/templates/vacancy-profile-view.html
@@ -4,10 +4,10 @@
         <section class="user-dashboard" >
             <section class="user-image-dashboard">
                 <label for="uploadImage">
-                    <img id="userImage" src="/images/asps.png" class="user-image" alt="user image">
+                    <img id="vacancy-image" src="/images/asps.png" class="user-image" alt="user image">
                 </label>
                 <section class="image-controls">
-                    <h1>Lore ipsum</h1>
+                    <h1 id="vacancy-name">Lore ipsum</h1>
                     <input type="file" id="uploadImage" accept="image/*" hidden>
                 </section>
             </section>
@@ -21,53 +21,42 @@
         <section class="text-area">
             <section>
                 <label>
-                    <textarea class="text-user"  maxlength="10000"  readonly rows="50" cols="150">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
-                    Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
-                    Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
-                    Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
-                    Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
-                    Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa. Phasellus semper dictum sapien, eget aliquam nibh porta vitae. Ut ullamcorper sollicitudin ornare. Ut imperdiet, urna a scelerisque bibendum, metus ligula consequat nisl, accumsan porttitor quam nibh eu neque. Etiam rutrum, risus laoreet consequat venenatis orci nisi id lacus.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris felis velit, accumsan et ipsum non, tristique porttitor leo. Aliquam cursus pellentesque ante eget tempus. Suspendisse sodales sit amet lorem eu iaculis. Aenean non blandit enim, ut dignissim urna. Nunc consectetur leo accumsan magna scelerisque fringilla. Donec mi magna, hendrerit efficitur ornare eget, blandit ac erat. Vivamus molestie lorem velit, sed malesuada tellus tempor quis. Aenean quis interdum elit, sit amet luctus nunc. Suspendisse ullamcorper at mauris et sagittis. Fusce ligula lacus, consectetur at sem ac, laoreet eleifend libero.
-                    Nullam cursus dolor eget malesuada sagittis. Etiam luctus lectus ac ligula molestie efficitur. Pellentesque euismod vitae magna sit amet volutpat. Aenean dignissim dictum justo, eget aliquet massa
-                    </textarea>
+                    <textarea class="text-user" id="vacancy-description" maxlength="10000"  readonly rows="50" cols="150"></textarea>
                 </label>
 
 
             </section>
 
         </section>
-        <section class="contact-information" >
-            <section >
-                <h3 class="display-section" >About this role</h3>
-            </section>
-            <section >
-                <h4 class="display-section"  >Apply Before</h4>
-                <label>
-                    <input type="date"  class="contact-method" readonly>
-                </label>
-            </section>
-            <section  >
-                <h4 class="display-section" >Job Posted On</h4>
-                <label>
-                    <input type="date"   class="contact-method" readonly>
-                </label>
-            </section>
-            <section >
-                <h4 class="display-section">Job type</h4>
-                <label>
-                    <input type="text" value="         lore ipsum"  class="contact-method" readonly>
-                </label>
-            </section>
-            <section >
-                <h4 class="display-section">Salary</h4>
-                <label>
-                    <input type="text" value="         lore ipsum"  class="contact-method" readonly>
-                </label>
-            </section>
+        <section class="vacancy-details">
+            <h3 class="vacancy-title">About This Role</h3>
+
+            <div class="vacancy-field">
+                <h4 class="vacancy-label">Apply Before:</h4>
+                <input type="date" id="vacancy-apply-before" class="vacancy-input" readonly>
+            </div>
+
+            <div class="vacancy-field">
+                <h4 class="vacancy-label">Job Posted On:</h4>
+                <input type="date" id="vacancy-posted-date" class="vacancy-input" readonly>
+            </div>
+
+            <div class="vacancy-field">
+                <h4 class="vacancy-label">Job Type:</h4>
+                <input type="text" id="vacancy-job-type" class="vacancy-input" readonly>
+            </div>
+
+            <div class="vacancy-field">
+                <h4 class="vacancy-label">Salary</h4>
+                <div class="salary-container">
+                    <input type="text" id="vacancy-min-salary" class="vacancy-input salary-input" readonly>
+                    <span class="salary-unit">$ -</span>
+                </div>
+                <div class="salary-container">
+                    <input type="text" id="vacancy-max-salary" class="vacancy-input salary-input" readonly>
+                    <span class="salary-unit">$</span>
+                </div>
+            </div>
         </section>
     </section>
 </main>
