--- a/HTML/views/sign-up-company.html
+++ b/HTML/views/sign-up-company.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="description" content="Employment web site">
-    <meta name="keywords" content="HTML5, CSS3, JavaScript">
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="Employment web site">
+        <meta name="keywords" content="HTML5, CSS3, JavaScript">
 
-    <title>JobTray</title>
-    <script src="/JS/xlu-include-file.js"></script>
-    <script src="/JS/ValidationSignUpCompany.js"></script>
-    <link rel="stylesheet" href="/CSS/general-style.css">
-    <link rel="stylesheet" href="/CSS/headers.css">
-    <link rel="stylesheet" href="/CSS/sign-form-style.css">
-    <link rel="stylesheet" href="/CSS/footer-style.css">
-</head>
-<body>
-    <div id="wrapper">
-        <header id="sign_header" xlu-include-file="/HTML/templates/sign-header.html">
-        </header>
+        <title>JobTray</title>
+        <script src="/JS/redirectFunctions.js"></script>
+        <script src="/JS/auxiliaryFunctions.js"></script>
+        <script src="/JS/viewComposition.js"></script>
+        <script src="/JS/ValidationSignUpCompany.js"></script>
 
-        <main id="sign-content" xlu-include-file="/HTML/templates/company-sign-up.html">
-        </main>
+        <link rel="stylesheet" href="/CSS/general-style.css">
+        <link rel="stylesheet" href="/CSS/headers.css">
+        <link rel="stylesheet" href="/CSS/sign-form-style.css">
+        <link rel="stylesheet" href="/CSS/footer-style.css">
+    </head>
+    <body>
+        <div id="wrapper">
+            <header id="sign_header">
+            </header>
 
-        <footer id="footer" xlu-include-file="/HTML/templates/footer.html">
-        </footer>
-    </div>
-    <script>
-        xLuIncludeFile();
-    </script>
-</body>
+            <main id="sign-content">
+            </main>
+
+            <footer id="footer">
+            </footer>
+        </div>
+        <script>
+            loadViewSignUpCompany();
+        </script>
+    </body>
 </html>
