--- a/CSS/headers.css
+++ b/CSS/headers.css
@@ -8,7 +8,6 @@
     flex-wrap:wrap;
 }
 
-
 #job-seeker-header{
     display:flex;
     border-style:none;
@@ -24,9 +23,8 @@
     width:100%;
     display: flex;
     justify-content: flex-start;
-
-
 }
+
 #main-header{
     display:flex;
     border-style:none;
@@ -43,6 +41,15 @@
     height: 40px;
     background-color: white;
     border:white;
+    object-fit: cover;
+}
+
+#jobSeekerProfileImage {
+    border-radius: 50%;
+    width: 20px;  /* Cambiado a 20px de ancho */
+    height: 20px; /* Ajustado para mantener proporción */
+    background-color: white;
+    border: white;
     object-fit: cover;
 }
 
@@ -70,14 +77,15 @@
     color:gray;
     margin-right:20px;
 }
+
 .job-seeker-buttons-section{
     display: flex inline;
     justify-content: space-between;
     align-items: flex-end;
     margin-top:20px;
     gap:5px;
-
 }
+
 .job-seeker-find-jobs-button {
     color: #1d4f9a;
     background-color: white;
@@ -89,22 +97,29 @@
     margin-bottom: 20px;
 }
 
-
 .job-seeker-header-profile-button{
     text-align:left;
     background-color: #1d4f9a;
     border-style: none;
     color:gray;
-
 }
-#imgJobSeeker {
+
+#job-seeker-header-profile-image {
     border-radius: 75%;
     width: 40px;
     height: 40px;
     background-color: white;
     border: white;
     object-fit: cover;
+}
 
+#company-header-profile-image {
+    border-radius: 75%;
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    border: white;
+    object-fit: cover;
 }
 
 .buttons-main-page-section{
@@ -115,6 +130,7 @@
     gap:20px;
     margin-right:20px;
 }
+
 .buttons-main-page{
     color:#1d4f9a;
     background-color: white;
@@ -123,26 +139,34 @@
     width: 100px;
     border-radius:4px;
 }
+
 .display-section{
     display: inline;
 }
+
 .login-section{
     background-color: white;
     border-color: white;
-    width: 200px;
-    height:40px;
+    width: 90px;
     margin-top: 20px;
     margin-bottom: 10px;
     margin-left: 20px;
 }
+
 .buttons-section-header {
-    display: flex inline;gap:5px;
+    display: flex inline;
+    gap:5px;
 }
+
 .color-name{
     color:white;
 }
+
 .section-button-job-seeker-button{
-    display: flex inline;gap:1px;margin-right: 20px;margin-bottom: 20px;
+    display: flex inline;
+    gap:1px;
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
 
 .popup-menu {
