--- a/HTML/templates/company-header.html
+++ b/HTML/templates/company-header.html
@@ -1,7 +1,7 @@
 <header id="company-header">
     <section class="display-section">
         <section class="display-section">
-            <img src="/images/asps.png" class="login-section" alt="Company Logo">
+            <img src="/images/asps.png" class="login-section" id="header-logo" alt="Company Logo">
         </section>
     </section>
     <section class="display-section">
@@ -10,9 +10,11 @@
             <button class="company-buttons" onclick="redirectToVacancyPostCompany(event, this)">Post a job</button>
 
             <section class="buttons-section-header">
-                <img src="/images/asps.png" id="imgCompany" alt="Company Profile">
+                <img src="/images/asps.png" id="company-header-profile-image" alt="Company Profile">
+
                 <button class="company-buttons-profile">
-                    <b class="color-name">Company Name</b><br>company@example.com
+                    <b class="color-name" id="company-header-name">Company Name</b><br>
+                    <span id="company-header-email">company@example.com</span>
                 </button>
 
                 <div class="popup-menu">
