--- a/HTML/templates/job-seeker-header.html
+++ b/HTML/templates/job-seeker-header.html
@@ -1,7 +1,7 @@
 <header id="job-seeker-header">
     <section class="display-section">
         <section class="display-section">
-            <img src="/images/asps.png" class="login-section" alt="image">
+            <img src="/images/asps.png" class="login-section" id="header-logo" alt="image">
         </section>
     </section>
     <section class="job-seeker-buttons-section">
@@ -9,16 +9,19 @@
             <button class="job-seeker-find-jobs-button" onclick="redirectToFindJobsJobSeeker(event, this)">Find a job</button>
         </section>
 
-            <section class="section-button-job-seeker-button">
-                <img src="/images/asps.png" id="imgJobSeeker" alt="Profile Picture">
-                <button class="job-seeker-header-profile-button">
-                    <b class="color-name">Name</b><br>email@example.com
-                </button>
+        <section class="section-button-job-seeker-button">
+            <img src="/images/asps.png" id="job-seeker-header-profile-image" alt="Profile Picture">
 
-                <div class="popup-menu">
-                    <button class="popup-btn" onclick="redirectToJobSeekerProfileJobSeeker(event, this)">Edit profile</button>
-                    <button class="popup-btn logout" onclick="redirectToMainPage(event, this)">Log out</button>
-                </div>
-            </section>
+            <button class="job-seeker-header-profile-button">
+                <b class="color-name" id="job-seeker-header-name">Name</b>
+                <br>
+                <span id="job-seeker-header-email">email@example.com</span>
+            </button>
+
+            <div class="popup-menu">
+                <button class="popup-btn" onclick="redirectToJobSeekerProfileJobSeeker(event, this, 1)">Edit profile</button>
+                <button class="popup-btn logout" onclick="redirectToMainPage(event, this)">Log out</button>
+            </div>
+        </section>
     </section>
 </header>
