--- a/HTML/templates/sign-header.html
+++ b/HTML/templates/sign-header.html
@@ -1,7 +1,7 @@
 <header id="login-and-signup-header">
     <section class="display-section">
         <section  class="display-section">
-            <img src="/images/asps.png" class="login-section" alt="logotype">
+            <img src="/images/asps.png" class="login-section" id="header-logo" alt="logotype">
         </section>
     </section>
 </header>
