--- a/HTML/views/find-jobs-job-seeker.html
+++ b/HTML/views/find-jobs-job-seeker.html
@@ -6,7 +6,9 @@
         <meta name="keywords" content="HTML5, CSS3, JavaScript">
 
         <title>JobTray</title>
-        <script src="/JS/xlu-include-file.js"></script>
+        <script src="/JS/redirectFunctions.js"></script>
+        <script src="/JS/auxiliaryFunctions.js"></script>
+        <script src="/JS/viewComposition.js"></script>
 
         <link rel="stylesheet" href="/CSS/general-style.css">
         <link rel="stylesheet" href="/CSS/headers.css">
@@ -16,23 +18,23 @@
     </head>
     <body>
         <div id="wrapper">
-            <header id="sign_header" xlu-include-file="/HTML/templates/job-seeker-header.html">
+            <header id="job_seeker_header">
             </header>
 
-            <section id="main-tittle" xlu-include-file="/HTML/templates/main-tittle.html">
+            <section id="main-tittle">
             </section>
 
-            <section id="search-bar" xlu-include-file="/HTML/templates/job-seeker-search-bar.html">
+            <section id="search-bar">
             </section>
 
-            <main id="find-jobs-content" xlu-include-file="/HTML/templates/job-seeker-find-jobs-list.html">
+            <main id="find-jobs-content">
             </main>
 
-            <footer id="footer" xlu-include-file="/HTML/templates/footer.html">
+            <footer id="footer">
             </footer>
         </div>
         <script>
-            xLuIncludeFile();
+            loadViewFindJobsJobSeeker();
         </script>
     </body>
 </html>
