--- a/HTML/templates/main-page.html
+++ b/HTML/templates/main-page.html
@@ -1,11 +1,11 @@
 <main class="main-page-main">
     <section id="top">
-        <h1>Lorem Ipsum!</h1>
+        <h1>Encuentra trabajo / Expande tu empresa!</h1>
         <div id="container">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p >En JobTray, es nuestra misión acercar a buscadores de empleo y empresarios, para reducir el inconveniente que surge con la busqueda tradicional. Busqueda de trabajo, en bandeja.</p>
         </div>
     </section>
     <div id="content">
-        <img src="/images/asps.png" alt="placeholder" class="placeholder">
+        <img src="/images/Logo_Jobtray_Texto.png" alt="placeholder" class="placeholder">
     </div>
 </main>
