--- a/CSS/footer-style.css
+++ b/CSS/footer-style.css
@@ -17,23 +17,66 @@ footer p {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: right;
+    justify-content: left;
     align-items: center;
 }
 
 #footer-container {
     width: 20%;
     height: 80%;
-    padding-right: 30px;
-    padding-left: 10px;
+    padding-right: 10px;
+    padding-left: 30px;
     text-align: left;
 
 }
 
 #footer-container2 {
-    width: 20%;
+    width: fit-content;
     height: 80%;
-    padding-right: 30px;
-    padding-left: 10px;
+    padding-right: 10px;
+    padding-left: 30px;
     text-align: left;
+}
+
+@media only screen and (max-width: 600px){
+    #footer {
+        width: 100%;
+        justify-content: left;
+        align-items: center;
+        padding-bottom: 10px;
+    }
+    #footer-container {
+       width: 30%;
+       padding-right: 30px;
+       padding-left: 20px;
+
+    }
+    #footer-container2 {
+        width: fit-content;
+        padding-right: 5px;
+        padding-left: 10px;
+    }
+
+}
+
+@media screen and (max-width: 1280px) {
+    #footer {
+        width: 100%;
+        justify-content: left;
+        align-items: center;
+        padding-bottom: 10px;
+    }
+    #footer-container {
+        width: 30%;
+        padding-right: 30px;
+        padding-left: 30px;
+
+    }
+    #footer-container2 {
+        width: fit-content;
+        padding-right: 5px;
+        padding-left: 10px;
+    }
+
+
 }
