--- a/CSS/main-page-style.css
+++ b/CSS/main-page-style.css
@@ -1,5 +1,8 @@
 .main-page-main {
-    height: 80vh;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .main-page-main h1 {
@@ -18,8 +21,8 @@
     border-width: 2px;
     border-color: black;
     width: 80%;
-    height: 355px;
-    margin: 30px auto;
+    height: fit-content;
+    margin: 20px auto;
     position: relative;
     align-items: center;
     justify-content: center;
@@ -31,7 +34,6 @@
     width: 80%;
     margin: 20px auto;
     background: #f5f5f5;
-    padding: 20px;
     border-radius: 8px;
 
 }
@@ -46,4 +48,12 @@
 .placeholder {
     width: 100%;
     height: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+    #container {max-width: fit-content}
+
+@media only screen and (max-width: 1280px){
+    #container {max-width: fit-content}
+}
 }
