--- a/HTML/templates/footer.html
+++ b/HTML/templates/footer.html
@@ -1,13 +1,13 @@
 <section id="footer">
     <div id="footer-container">
         <p class="info-text">About us</p>
-        <p>Lorem Ipsum</p>
-        <p>Lorem Ipsum</p>
+        <p>Who are we?</p>
+        <p>FAQ.</p>
 
     </div>
     <div id="footer-container2">
         <p class="info-text">Contact</p>
         <p>Email: <a href="#">namesurname@gmail.com</a></p>
-        <p>Number: +34 12345678</p>
+        <p>Number: +34 633548864</p>
     </div>
 </section>
