--- a/HTML/templates/company-job-listing-list.html
+++ b/HTML/templates/company-job-listing-list.html
@@ -1,13 +1,13 @@
-<section class="list-container">
+<section class="list-container" id="job-listing-list">
     <table>
         <thead>
             <tr>
-                <th class="clickable-th">Vacancy Name<span class="sort-icon"><></span></th>
-                <th class="clickable-th">Stage<span class="sort-icon"><></span></th>
-                <th class="clickable-th">Date Posted<span class="sort-icon"><></span></th>
-                <th class="clickable-th">Due Date<span class="sort-icon"><></span></th>
-                <th class="clickable-th">Job Type<span class="sort-icon"><></span></th>
-                <th class="clickable-th">Applicants<span class="sort-icon"><></span></th>
+                <th class="clickable-th">Vacancy Name</th>
+                <th class="clickable-th">Stage</th>
+                <th class="clickable-th">Date Posted</th>
+                <th class="clickable-th">Due Date</th>
+                <th class="clickable-th">Job Type</th>
+                <th class="clickable-th">Applicants</th>
                 <th></th>
             </tr>
         </thead>
