--- a/HTML/templates/company-vacancy-list.html
+++ b/HTML/templates/company-vacancy-list.html
@@ -2,9 +2,9 @@
     <table>
         <thead>
         <tr>
-            <th class="clickable-th">Full Name<span class="sort-icon"><></span></th>
-            <th class="clickable-th">Hiring Stage<span class="sort-icon"><></span></th>
-            <th class="clickable-th">Applied Date<span class="sort-icon"><></span></th>
+            <th class="clickable-th">Full Name</th>
+            <th class="clickable-th">Hiring Stage</th>
+            <th class="clickable-th">Applied Date</th>
             <th></th>
         </tr>
         </thead>
