--- a/HTML/templates/company-vacancy-post.html
+++ b/HTML/templates/company-vacancy-post.html
@@ -59,8 +59,8 @@
 
         <section class="form-group-section">
             <div class="label-container">
-                <label>Employment Sector</label>
-                <p class="info-text">You can select one employment sector</p>
+                <label>Minimum education required</label>
+                <p class="info-text">Select the minimum employment required</p>
             </div>
             <div class="input-container">
                 <div class="radio-group">
@@ -75,7 +75,7 @@
 
         <section class="form-group-section">
             <div class="label-container">
-                <label for="education-description">Minimum education required</label>
+                <label for="education-description">Job Description</label>
                 <p class="info-text">Describe the job vacancy</p>
             </div>
             <div class="input-container">
