--- a/HTML/templates/applicants-list-row.html
+++ b/HTML/templates/applicants-list-row.html
@@ -6,9 +6,15 @@
     </td>
     <td><span class="status-tag" id="applicant-stage">Stage</span></td>
     <td id="apply-date">01/01/2000</td>
-    <td>
-      <button class="see-profiles" id="applicant-see-profile-button">See Profiles</button>
-      <button class="more-options">···</button>
+    <td class="action-column">
+      <div class="button-group">
+        <button class="see-profiles" id="applicant-see-profile-button">See Profiles</button>
+        <button class="more-options">···</button>
+
+        <div class="options-menu">
+          <button class="decline-vacancy">Decline</button>
+        </div>
+      </div>
     </td>
   </tr>
 </template>
