--- a/HTML/templates/job-seeker-header.html
+++ b/HTML/templates/job-seeker-header.html
@@ -7,7 +7,13 @@
     <section class="job-seeker-buttons-section">
         <section class="job-seeker-find-jobs-button-section">
             <button class="job-seeker-find-jobs-button" onclick="redirectToFindJobsJobSeeker(event, this)">Find a job</button>
+
+            <button class="mobile-btn" >☰</button>
+            <div class="mobile-btn-container">
+                <button class="job-seeker-find-jobs-button" onclick="redirectToFindJobsJobSeeker(event, this)">Find a job</button>
+            </div>
         </section>
+
 
         <section class="section-button-job-seeker-button">
             <img src="/images/asps.png" id="job-seeker-header-profile-image" alt="Profile Picture">
