--- a/HTML/templates/company-header.html
+++ b/HTML/templates/company-header.html
@@ -9,6 +9,12 @@
             <button class="company-buttons" onclick="redirectToJobListingCompany(event, this)">Job Listing</button>
             <button class="company-buttons" onclick="redirectToVacancyPostCompany(event, this)">Post a job</button>
 
+            <button class="mobile-btn" >☰</button>
+            <div class="mobile-btn-container">
+                <button class="company-buttons" onclick="redirectToJobListingCompany(event, this)">Job Listing</button>
+                <button class="company-buttons" onclick="redirectToVacancyPostCompany(event, this)">Post a job</button>
+            </div>
+
             <section class="buttons-section-header">
                 <img src="/images/asps.png" id="company-header-profile-image" alt="Company Profile">
 
