--- a/CSS/footer-style.css
+++ b/CSS/footer-style.css
@@ -64,7 +64,7 @@ footer p {
         width: 100%;
         justify-content: left;
         align-items: center;
-        padding-bottom: 10px;
+        padding-top: 10px;
     }
     #footer-container {
         width: 30%;
