--- a/CSS/headers.css
+++ b/CSS/headers.css
@@ -275,4 +275,11 @@
     .job-seeker-find-jobs-button{
         display: none;
     }
+
+    .job-seeker-find-jobs-button-section{
+        display: block;
+        width: 100%;
+        text-align: left;
+        margin: 1px 0 20px;
+    }
 }
